--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -5,80 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src ="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
-<script>
-    function computerPlay(){
-        const randomNum = Math.floor(Math.random() * 3);
-
-        switch (randomNum) {
-            case 0:
-                return 'Rock';
-                break;
-            case 1:
-                return 'Paper';
-                break;
-            case 2:
-                return 'Scissors';
-                break;
-            default:
-                console.log('Random number is not between 0-2');
-        }
-    }
-
-    function playRound(playerSelection, computerSelection){
-
-        playerSelection = playerSelection.toLowerCase();
-        computerSelection = computerSelection.toLowerCase();
-
-        if (playerSelection === computerSelection){
-            return 'It\'s a Tie!';
-        }
-        else if (playerSelection === 'rock'){
-            if (computerSelection === 'scissors'){
-                return 'You win! Rock beats Scissors';
-            }
-            else if(computerSelection === 'paper'){
-                return 'You lost! Paper beats Rock';
-            }
-        }
-        else if (playerSelection === 'paper'){
-            if (computerSelection === 'rock'){
-                return 'You win! Paper beats Rock';
-            }
-            else if (computerSelection === 'scissors'){
-                return 'You lose! Scissors beats Paper';
-            }
-        }
-        else if (playerSelection === 'scissors'){
-            if (computerSelection === 'rock'){
-                return 'You lose! Rock beats Scissors';
-            }
-            else if (computerSelection === 'paper'){
-                return 'You win! Scissors beats Paper';
-            }
-        }
-        else {
-            return 'Oops! Please enter either Rock, Paper, or Scissors';
-        }
-    }
-
-    function game(){
-
-        for (i = 0; i < 5; i++){
-            const computerSelection = computerPlay();
-            const playerSelection = prompt('Please enter Rock, Paper, or Scissors');
-            console.log(playRound(playerSelection, computerSelection));
-        }
-    }
-
-    game();
-
-
-
-
-</script>
 
 <body>
-    
+    <h1 class="heading">Rock, Paper, Scissors</h1>
+    <h2 class="heading">Select One</h2>
+
+    <div class ="selection-container">
+        <div id="rock" class = "selection">Rock</div>
+        <div id="paper" class = "selection">Paper</div>
+        <div id="scissors" class="selection">Scissors</div>
+    </div>
+
+    <div id="score-container">
+        <div id="computer-score" class = "score">Computer: 0</div>
+        <div id="player-score" class = "score">Player: 0</div>
+    </div>
+
+    <div id="results"></div>
+
+    <div id="winner-container">
+        <div id="winner"></div>
+    </div>
 </body>
-</html>DOCTYPE <html></html>
+
+</html>
